fixed profile not showing current question and answer

--- a/web/styles/main.css
+++ b/web/styles/main.css
@@ -78,6 +78,7 @@ select {
 
 .pad_top {
     padding-top: 0.25em;
+    width: 8em;
 }
 
 .errorspan
